update readme, added psychologist subscriptions, ai generate report template, fix bugs
